--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 backports-abc==0.4
 certifi==2016.2.28
 enum34==1.1.6
+meld3==1.0.2
 singledispatch==3.4.0.3
 six==1.10.0
+supervisor==3.3.0
 tornado==4.4
