--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-backports-abc==0.4
-certifi==2016.2.28
+click==6.6
 enum34==1.1.6
-meld3==1.0.2
-singledispatch==3.4.0.3
+eventlet==0.19.0
+Flask==0.11.1
+Flask-SocketIO==2.6.2
+greenlet==0.4.10
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+python-engineio==0.9.2
+python-socketio==1.4.4
 six==1.10.0
-supervisor==3.3.0
-tornado==4.4
+Werkzeug==0.11.10
+WTForms==2.1
