--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.1.0",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
+    "socket.io-client": "^1.4.8",
     "webpack": "^1.13.1"
   }
 }
