--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "git+https://github.com/katur/connectfour.git"
   },
   "devDependencies": {
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^3.1.0",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
