--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "url": "git+https://github.com/katur/connectfour.git"
   },
   "devDependencies": {
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^3.1.0",
     "node-sass": "^3.8.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "sass-loader": "^4.0.0",
     "socket.io-client": "^1.4.8",
     "webpack": "^1.13.1"
