--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^15.3.0",
     "sass-loader": "^4.0.0",
     "socket.io-client": "^1.4.8",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-notifier": "^1.3.2"
   }
 }
