--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^3.8.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "redux": "^3.5.2",
     "sass-loader": "^4.0.0",
     "socket.io-client": "^1.4.8",
     "webpack": "^1.13.1",
