--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "url": "git+https://github.com/katur/connectfour.git"
   },
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^3.8.0",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-react": "^7.12.7",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "mini-css-extract-plugin": "^1.3.2",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "sass-loader": "^4.0.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "socket.io-client": "^1.4.8",
-    "webpack": "^1.13.1",
-    "webpack-notifier": "^1.3.2"
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0"
   }
 }
